<resources>
    <string name="app_name">TP-julien-guillan-moc3</string>
    <string name="mainTitle">INPUT FORM</string>
    <string name="inputName">Name</string>
    <string name="input_nb_follows"></string>
    <string name="submit">Submit</string>
    <string name="avatarDescription">Avatar icon</string>
    <string name="notifDescription">Notifications icon</string>
    <string name="dashboardDescription">Dashboard icon</string>
    <string name="clockDescription">Clock icon</string>
    <string name="followingLabel">Following</string>
    <string name="followerLabel">Follower</string>
    <string name="themeButton">   Theme</string>
    <string name="shareButton">   Share this app</string>
</resources>
