<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainMainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoActivity">

    <ImageView
        android:id="@+id/avatarImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="69dp"
        android:contentDescription="@string/avatarDescription"
        android:src="@drawable/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/work_sans"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatarImageView" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/notifImageView"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:contentDescription="@string/notifDescription"
                android:src="@drawable/bell" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:contentDescription="@string/dashboardDescription"
                android:src="@drawable/dash" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:contentDescription="@string/clockDescription"
                android:src="@drawable/clock" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/followingLabel"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:fontFamily="@font/work_sans_light"
                android:text="@string/followingLabel"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/followingTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/work_sans_light"
                android:textAlignment="textStart"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/followerLabel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/work_sans_light"
                android:text="@string/followerLabel"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/followerTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/work_sans_light"
                android:textAlignment="viewStart"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="400dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/themeButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawableStart="@drawable/tshirt"
            android:fontFamily="@font/work_sans"
            android:text="@string/themeButton"
            android:textAlignment="textStart" />

        <Button
            android:id="@+id/schareButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawableStart="@drawable/share"
            android:fontFamily="@font/work_sans"
            android:text="@string/shareButton"
            android:textAlignment="textStart" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>